# dgx_multi

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cu  slurm_example.sh
cmake/: Cuda.cmake
